// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composition as should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  background-color: rgba(0, 0, 0, 0.5);
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 19900409;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-ModalBackdrop"
  data-dialog-ref="test"
  hidden=""
  style="display: none;"
>
  Toggle
</div>
`;

exports[`composition hook should return with Modal.Backdrop props 1`] = `
Object {
  "className": "css-1szagek css-63it0p css-1qnz8fc bb-Box bb-ModalBackdrop",
  "data-dialog-ref": "test",
  "hidden": true,
  "onAnimationEnd": [Function],
  "onTransitionEnd": [Function],
  "style": Object {
    "display": "none",
  },
  "wrapElement": [Function],
}
`;

exports[`composition render props should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  background-color: rgba(0, 0, 0, 0.5);
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 19900409;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-ModalBackdrop"
  data-dialog-ref="test"
  hidden=""
  style="display: none;"
>
  Hello world
</div>
`;

exports[`defaultProps should render correctly for className 1`] = `
.emotion-0 {
  background-color: rgba(0, 0, 0, 0.5);
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 19900409;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2 red bb-Box bb-ModalBackdrop"
  data-dialog-ref="test"
  hidden=""
  style="display: none;"
>
  Toggle
</div>
`;

exports[`overrides Modal.Backdrop.base should render correctly 1`] = `
.emotion-0 {
  background-color: rgba(0, 0, 0, 0.5);
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 19900409;
}

.emotion-0 {
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-ModalBackdrop"
  data-dialog-ref="test"
  hidden=""
  style="display: none;"
>
  Toggle
</div>
`;

exports[`props should render correctly 1`] = `
.emotion-0 {
  background-color: rgba(0, 0, 0, 0.5);
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 19900409;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-ModalBackdrop"
  data-dialog-ref="test"
  hidden=""
  style="display: none;"
>
  Toggle
</div>
`;

exports[`theming Modal.Backdrop.base should render correctly 1`] = `
.emotion-0 {
  background-color: rgba(0, 0, 0, 0.5);
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 19900409;
}

.emotion-0 {
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-ModalBackdrop"
  data-dialog-ref="test"
  hidden=""
  style="display: none;"
>
  Toggle
</div>
`;
